Modificata la directory di output

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ theme                  : "minimal-mistakes-jekyll"
 minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
+destination              : docs
 locale                   : "it-IT"
 title                    : "Roma-NY"
 title_separator          : "-"
