--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ subtitle                 : #"Da Roma a New York su una nave romana" # site tagli
 name                     : "Your Name"
 description              : "An amazing website."
 url                      : "https://tacunit.github.io/romany/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+baseurl                  : "/romany" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/img/logo-400x400.png"
