Aggiornata la grafica e le immagini

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 theme                    : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "sunrise" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 destination              : docs
@@ -26,7 +26,7 @@ url                      : "https://tacunit.github.io" # the base hostname & pro
 baseurl                  : "/romany" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/img/logo-400x400.png"
+logo                     : #"/assets/img/logo-400x400.png"
 masthead_title           : " "
 breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
